alteder default files: fixed tabulation, globaljs: fixed modaldialog scrollbar bug, basecss: altered global button width, buy-buttons: added unique ids + preselected variant as optional parameter, price: added parameters to hide price range and currency icon vatiant-options and variand-picker: added preselected variand parameters

--- a/assets/base.css
+++ b/assets/base.css
@@ -1180,7 +1180,7 @@ button.shopify-payment-button__button--unbranded,
 .shopify-challenge__button,
 .customer button,
 button.shopify-payment-button__button--unbranded {
-  min-width: calc(12rem + var(--buttons-border-width) * 2);
+  min-width: 18rem;
   min-height: calc(4.5rem + var(--buttons-border-width) * 2);
 }
 
